--- a/dialog-email.html
+++ b/dialog-email.html
@@ -7,7 +7,7 @@
 			</select>
 		</div>
 		<div class="form-element">
-			<label class="form-label" for="mail-subject"></label>
+			<label class="form-label" for="mail-subject">Subject:</label>
 			<input type="text" name="mail-subject" id="mail-subject" value="This is a test subject for %i">
 		</div>
 		<p><textarea name="mail-body" id="mail-body" rows="5" cols="20">
