--- a/dialog-lease.html
+++ b/dialog-lease.html
@@ -1,4 +1,4 @@
-<div id="dialog-lease">
+<div id="dialog-lease" class="list-form">
 	<form action="index.html" method="POST">
 		<div class="form-element">
 			<input type="radio" value="0" name="lease-location" id="location-0">
@@ -12,8 +12,14 @@
 
 		<div class="form-element">
 			<input type="radio" value="2" name="lease-location" id="location-2">
-			<label for="location-2">456 Spruce Street #12, Genevieve Cornhill, Archstone
+			<label for="location-2">456 Spruce Street #12, Genevieve Cornhill, Archstone</label>
 		</div>
+		
+		<p class="submit-area">
+			<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
+			&nbsp;&nbsp;&nbsp;&nbsp;
+			<button class="submit"><span>Cancel</span><span class="end"> &nbsp; </span></button>
+		</p>
 
 	</form>
 </div>
