--- a/select-a-lease.html
+++ b/select-a-lease.html
@@ -53,7 +53,7 @@
   <!-- end scripts -->
 
 </head>
-<body class="signin">
+<body class="select-a-lease">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
@@ -68,48 +68,34 @@
 		</div>
   </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="titled-box clearfix">
+		<div id="select-a-lease" class="titled-box clearfix list-form">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body1">
-				<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
-				<ul>
-					<li>Pay your rent online</li>
-					<li>Submit and track service requests</li>
-					<li>Find community forms and policies</li>
-					<li>And much, much more...</li>
-				</ul>
-				<p>Log in now to get started!</p>
-			</div>
-			<div class="body2">
-				<form method="POST" action="select-a-lease.html">
-					<h3>Please Sign In</h3>
-					<p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p>
-					<p><input type="text" class="autoclear" name="email" id="email" value="Email Address"></p>
-					<p><input type="password" class="autoclear" name="password" id="password" value="password"></p>
-					<div class="submit-area-right">
-						<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
+			<div class="body">
+				<form action="request-history.html" method="POST">
+
+					<div class="form-element">
+						<input type="radio" value="0" name="lease-location" id="location-0">
+						<label for="location-0">[ Apartment Address ] Customer Name [ Community ]</label>
 					</div>
-					<div class="remember-area">
-						<input type="checkbox" name="remember_email" id="remember-email">
-						<p><label for="remember-email">Remember my email</label></p>
-						<p><a href="#">Forgot password?</a></p>
+
+					<div class="form-element">
+						<input type="radio" value="1" name="lease-location" id="location-1">
+						<label for="location-1">123 Main Street #101, Genvieve Cornhill, Archstone Englewood</label>
 					</div>
+
+					<div class="form-element">
+						<input type="radio" value="2" name="lease-location" id="location-2">
+						<label for="location-2">456 Spruce Street #12, Genevieve Cornhill, Archstone
+					</label></div>
+
+					<p class="submit-area">
+						<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
+						&nbsp;&nbsp;&nbsp;&nbsp;
+						<button class="submit"><span>Cancel</span><span class="end"> &nbsp; </span></button>
+					</p>
+
 				</form>
-			</div>
-			<p class="box-footer"><span></span></p>
-		</div>
-		
-		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
-			<img src="images/puppy.png">
-		</div>
-		
-		<div class="titled-box left clearfix small-box titled-box-right">
-			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
-			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
-				<a href="#" class="button-iphone"> &nbsp; </a>
 			</div>
 			<p class="box-footer"><span></span></p>
 		</div>
@@ -124,26 +110,6 @@
 		</div>
   </footer>
 
-
-	<!-- Hidden Email Dialog -->
-	<div id="mail" class="titled-box">
-		<form action="index.html" method="POST">
-			<div class="description-summary">
-				<h3><label class="form-label">To:</label></h3>
-				<p><select name="mail-to">
-					<option value="andrew_wyndertyne@archstoneapartments.com">andrew_wyndertyne@archstoneapartments.com</option>
-				</select></p>
-			</div>
-			<div class="description-summary">
-				<h3><label class="form-label">Subject:</label></h3>
-				<p><input type="text" name="mail-subject"></p>
-			</div>
-			<p><textarea name="mail-body" rows="5" cols="20"></textarea></p>
-			<p class="submit-area">
-				<button type="submit" class="submit"><span>Send</span><span class="end"> &nbsp; </span></button>
-			</p>
-		</form>
-	</div>
 
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
        mathiasbynens.be/notes/async-analytics-snippet -->
