--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<!--[if IE 9]>
 	  <link rel="stylesheet" href="css/ie9.css">
 	<![endif]-->
-
+	
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
   <!-- All JavaScript at the bottom, except this Modernizr build.
@@ -42,14 +42,18 @@
   <!-- JavaScript in the header so my other stuff doesn't break -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="js/jquery-1.7.2.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
+  <script src="http://cachedcommons.org/cache/jquery-bbq/1.2.1/javascripts/jquery-bbq.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/jquery.cookie.js"></script>
 	<script src="js/browserimage.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/yearpicker.js"></script>
+  <script src="js/servicerequest.js"></script>
+
   <!-- end scripts -->
 
 </head>
