--- a/request-history.html
+++ b/request-history.html
@@ -58,7 +58,7 @@
   <script src="js/script.js"></script>
   <script src="js/nav.js"></script>
   <script src="js/request-history.js"></script>
-  <script src="js/year-picker.js"></script>
+  <script src="js/datemanager.js"></script>
 
 	<script>
   (function ($) {
