--- a/request-history.html
+++ b/request-history.html
@@ -47,9 +47,9 @@
   <!-- JavaScript in the header so my other stuff doesn't break -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="js/jquery-1.7.2.min.js"></script>
   <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
-  <script src="http://cachedcommons.org/cache/jquery-bbq/1.2.1/javascripts/jquery-bbq.js"></script>
+  <script src="js/jquery-bbq.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
   <script src="js/jquery.cookie.js"></script>
@@ -61,40 +61,37 @@
   <script src="js/datemanager.js"></script>
 
 	<script>
-  (function ($) {
-		$(function(){
-			
-			// set defaults for page loaded with no hashtags
-		  var defaultHistoryState = {
-		      "year": 2012, // would come from server side model
-		      "type": "srt0", // default initial selected item
-		      "status": "srs0" // default initial selected item
-		  };
-		  var defaultHistoryParams = {
-		      "yearsToShow": [2009, 2010, 2011, 2012],
-		      "dateElement": $("#year-selector .slider"),
-		      "filtersElement": $("#filters"),
-		      "filterTypeElement": $("#requestHistoryType"),
-		      "filterStatusElement": $("#requestHistoryStatus"),
-		      "historyElement": $("#history"),
-		      "state": defaultHistoryState
-		  };
+	$(function(){
 		
-		
-			// initialize the service request history components
-			requestHistory.history(defaultHistoryParams);
+		// set defaults for page loaded with no hashtags
+	  var defaultHistoryState = {
+	      "year": 2012, // would come from server side model
+	      "type": "srt0", // default initial selected item
+	      "status": "srs0" // default initial selected item
+	  };
+	  var defaultHistoryParams = {
+	      "yearsToShow": [2008, 2009, 2010, 2011, 2012],
+	      "dateElement": $(".date-manager"),
+	      "filtersElement": $(".filters"),
+	      "filterTypeElement": $("#requestHistoryType"),
+	      "filterStatusElement": $("#requestHistoryStatus"),
+	      "historyElement": $("#history"),
+	      "state": defaultHistoryState
+	  };
+	
+	
+		// initialize the service request history components
+		requestHistory.history(defaultHistoryParams);
 
-		  // handle hash change for service request history
-		  $(window).bind("hashchange", function (e) {
-		      // shallow copy the defaultHistoryParams.state before extending with $.deparam.fragment, otherwise the default is updated because of reference assignment
-		      requestHistory.history.showHistory($.extend($.extend({}, defaultHistoryParams.state), $.deparam.fragment()));
-		  });
+	  // handle hash change for service request history
+	  $(window).bind("hashchange", function (e) {
+	      // shallow copy the defaultHistoryParams.state before extending with $.deparam.fragment, otherwise the default is updated because of reference assignment
+	      requestHistory.history.showHistory($.extend($.extend({}, defaultHistoryParams.state), $.deparam.fragment()));
+	  });
 
-		  // first time, trigger the hash change to show the default history or reflect a bookmarked or linked hash
-		  $(window).trigger("hashchange");
-		  
-		});
-   })(jQuery);
+	  // first time, trigger the hash change to show the default history or reflect a bookmarked or linked hash
+	  $(window).trigger("hashchange");
+	});
 	</script>
 
   <!-- end scripts -->
@@ -157,16 +154,17 @@
 			<fieldset class="date-manager">
 				<a href="#" class="left-selector"> &nbsp; </a>
 				<a href="#" class="right-selector"> &nbsp; </a>
-				<div id="year-selector">
+				<div class="year-selector">
 					<div class="slider">
 					</div>
+					<div class="arrow"></div>
 				</div>
 				<div class="month-selector">
 					
 				</div>
 			</fieldset>
 			<fieldset class="discreet-accordion-header">
-				<div id="filters">
+				<div class="filters">
 					<label class="form-element-right form-element">
 						<span>Status</span>
 						<select name="requestHistoryStatus" id="requestHistoryStatus">
@@ -345,11 +343,16 @@
 		</div>
   </div>
   <footer>
-		<div class="navigation">
-			<a href="#">Privacy Policy</a>  |  <a href="#">ArchstoneApartments.com</a>
+		<div class="right">
+			<a href="dialog-email.html" class="cta-dialog" rel="footer" title="Contact Us">Contact Us</a>
 		</div>
-		<div class="copyright">
-			<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a>
+		<div class="left">
+			<p>Champions Park  |  2525 E. 104th Ave., Thornton, CO 80233  |  (866) 914-9716</p>
+			<p>
+				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+				<a href="#">Privacy Policy</a> | 
+				<a href="#">ArchstoneApartments.com</a>
+			</p>
 		</div>
   </footer>
 
