--- a/index.html
+++ b/index.html
@@ -121,33 +121,14 @@
   </div>
   <footer>
 		<div class="navigation">
-			<a href="#">Privacy Policy</a>  |  <a href="#">ArchstoneApartments.com</a>
+			<a href="#">ArchstoneApartments.com</a>
 		</div>
 		<div class="copyright">
-			<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a>
+				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+				<a href="#">Privacy Policy</a>
 		</div>
   </footer>
 
-
-	<!-- Hidden Email Dialog -->
-	<div id="mail" class="titled-box">
-		<form action="index.html" method="POST">
-			<div class="description-summary">
-				<h3><label class="form-label">To:</label></h3>
-				<p><select name="mail-to">
-					<option value="andrew_wyndertyne@archstoneapartments.com">andrew_wyndertyne@archstoneapartments.com</option>
-				</select></p>
-			</div>
-			<div class="description-summary">
-				<h3><label class="form-label">Subject:</label></h3>
-				<p><input type="text" name="mail-subject"></p>
-			</div>
-			<p><textarea name="mail-body" rows="5" cols="20"></textarea></p>
-			<p class="submit-area">
-				<button type="submit" class="submit"><span>Send</span><span class="end"> &nbsp; </span></button>
-			</p>
-		</form>
-	</div>
 
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
        mathiasbynens.be/notes/async-analytics-snippet -->
