--- a/select-a-lease.html
+++ b/select-a-lease.html
@@ -102,11 +102,16 @@
 		
   </div>
   <footer>
-		<div class="navigation">
-			<a href="#">Privacy Policy</a>  |  <a href="#">ArchstoneApartments.com</a>
+		<div class="right">
+			<a href="dialog-email.html" class="cta-dialog" rel="footer" title="Contact Us">Contact Us</a>
 		</div>
-		<div class="copyright">
-			<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a>
+		<div class="left">
+			<p>Champions Park  |  2525 E. 104th Ave., Thornton, CO 80233  |  (866) 914-9716</p>
+			<p>
+				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+				<a href="#">Privacy Policy</a> | 
+				<a href="#">ArchstoneApartments.com</a>
+			</p>
 		</div>
   </footer>
 
