--- a/request-history.html
+++ b/request-history.html
@@ -87,7 +87,7 @@
 	  $(window).bind("hashchange", function (e) {
 	      // shallow copy the defaultHistoryParams.state before extending with $.deparam.fragment, otherwise the default is updated because of reference assignment
 	      requestHistory.history.showHistory($.extend($.extend({}, defaultHistoryParams.state), $.deparam.fragment()));
-				$('.date-manager').yearPicker('hashChange')
+				$('.date-manager').dateManager('hashChange')
 	  });
 
 	  // first time, trigger the hash change to show the default history or reflect a bookmarked or linked hash
@@ -159,9 +159,6 @@
 					<div class="slider">
 					</div>
 					<div class="arrow"></div>
-				</div>
-				<div class="month-selector">
-					
 				</div>
 			</fieldset>
 			<fieldset class="discreet-accordion-header">
