--- a/dialog-email.html
+++ b/dialog-email.html
@@ -3,7 +3,9 @@
 		<div class="form-element">
 			<label class="form-label" for="mail-to">To:</label>
 			<select name="mail-to" id="mail-to">
-				<option value="andrew_wyndertyne@archstoneapartments.com">andrew_wyndertyne@archstoneapartments.com</option>
+				<option value="arhstone_grove@archstoneapartments.com">Archstone Grove</option>
+				<option value="andrew_wyndertyne@archstoneapartments.com">Andrew Wyndertyne - Associate</option>
+				<option value="andrew_wyndertyne@archstoneapartments.com">Sum Guy - Associate</option>
 			</select>
 		</div>
 		<div class="form-element">
