--- a/select-a-lease.html
+++ b/select-a-lease.html
@@ -53,10 +53,10 @@
   <!-- end scripts -->
 
 </head>
-<body class="select-a-lease">
+<body class="signed-in select-a-lease">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_1.jpg" >
+		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
 	<script type="text/javascript">Background.init(); </script>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
