--- a/request-history.html
+++ b/request-history.html
@@ -98,10 +98,10 @@
   <!-- end scripts -->
 
 </head>
-<body class="request-history">
+<body class="signed-in request-history">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_1.jpg" >
+		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
 	<script type="text/javascript">Background.init(); </script>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
@@ -132,7 +132,7 @@
 						<li><a href="dialog-lease.html" class="cta-dialog" rel="request-history" title="Select the lease you would like to open">Switch to Different Lease</a></li>
 						<li><a href="#">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
-						<li><a href="#">Sign Out</a></li>
+						<li><a href="index.html">Sign Out</a></li>
 					</ul>
 				</li>
 			</ul>
