--- a/service-request.html
+++ b/service-request.html
@@ -55,10 +55,10 @@
   <!-- end scripts -->
 
 </head>
-<body class="service-request">
+<body class="signed-in service-request">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_1.jpg" >
+		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
 	<script type="text/javascript">Background.init(); </script>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
@@ -89,7 +89,7 @@
 						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
 						<li><a href="#">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
-						<li><a href="#">Sign Out</a></li>
+						<li><a href="index.html">Sign Out</a></li>
 					</ul>
 				</li>
 			</ul>
