--- a/select-a-lease.html
+++ b/select-a-lease.html
@@ -110,7 +110,7 @@
 			<p>
 				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
 				<a href="#">Privacy Policy</a> | 
-				<a href="#">ArchstoneApartments.com</a>
+				<a href="/">ArchstoneApartments.com</a>
 			</p>
 		</div>
   </footer>
