--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </div>
   <footer>
 		<div class="navigation">
-			<a href="#">ArchstoneApartments.com</a>
+			<a href="/">ArchstoneApartments.com</a>
 		</div>
 		<div class="copyright">
 				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
