--- a/request-sent.html
+++ b/request-sent.html
@@ -165,7 +165,7 @@
   </div>
   <footer>
 		<div class="navigation">
-			<a href="#">Privacy Policy</a>  |  <a href="#">ArchstoneApartments.com</a>
+			<a href="#">Privacy Policy</a>  |  <a href="/">ArchstoneApartments.com</a>
 		</div>
 		<div class="copyright">
 			<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a>
