--- a/request-history-1.html
+++ b/request-history-1.html
@@ -70,7 +70,7 @@
 	      "status": "open" // default initial selected item
 	  };
 	  var defaultHistoryParams = {
-	      "yearsToShow": [2010, 2011, 2012],
+	      "yearsToShow": [2012],
 	      "dateElement": $(".date-manager"),
 	      "filtersElement": $(".filters"),
 	      "filterTypeElement": $("#requestHistoryType"),
