--- a/service-request.html
+++ b/service-request.html
@@ -60,10 +60,7 @@
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_graphite_burst.png" >
   </div>
-	<script type="text/javascript">Background.init(); </script>
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+	<script type="text/javascript">Background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
   <header>
 		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
