--- a/register.html
+++ b/register.html
@@ -57,7 +57,7 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
-				<li><a href="request-history.html" title="Contact Us">Request History</a></li>
+				<li><a href="request-history.html" title="Contact Us">Previous Requests</a></li>
 				<li><a href="service-request.html" title="Contact Us">Service Request</a></li>
 			</ul>
 		</div>
