--- a/request-history-2.html
+++ b/request-history-2.html
@@ -118,7 +118,7 @@
 					<a href="service-request.html">Service</a>
 					<!-- <ul>
 						<li><a href="service-request.html">New Request</a></li>
-						<li><a href="request-history.html" class="active">Request History</a></li>
+						<li><a href="request-history.html" class="active">Previous Requests</a></li>
 					</ul> -->
 				</li>
 				<li><a href="#">Information</a></li>
@@ -143,7 +143,7 @@
 		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
 				<li><a href="service-request.html">New Request</a></li>
-				<li><a href="request-history.html" class="active">Request History</a></li>
+				<li><a href="request-history.html" class="active">Previous Requests</a></li>
 			</ul>
 		</div>
 		<!-- /Secondary Navigation -->
