--- a/request-sent.html
+++ b/request-sent.html
@@ -80,7 +80,7 @@
 		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
 				<li><a href="service-request.html" class="active">New Request</a></li>
-				<li><a href="request-history.html">Request History</a></li>
+				<li><a href="request-history.html">Previous Requests</a></li>
 			</ul>
 		</div>
 		<!-- /Secondary Navigation -->
