--- a/service-request.html
+++ b/service-request.html
@@ -71,7 +71,7 @@
 					<a href="service-request.html">Service</a>
 					<!-- <ul>
 						<li><a href="service-request.html">New Request</a></li>
-						<li><a href="request-history.html" class="active">Request History</a></li>
+						<li><a href="request-history.html" class="active">Previous Requests</a></li>
 					</ul> -->
 				</li>
 				<li><a href="#">Information</a></li>
@@ -96,7 +96,7 @@
 		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
 				<li><a href="service-request.html" class="active">New Request</a></li>
-				<li><a href="request-history.html">Request History</a></li>
+				<li><a href="request-history.html">Previous Requests</a></li>
 			</ul>
 		</div>
 		<!-- /Secondary Navigation -->
