trying to fix header nav css

--- a/contact-information.html
+++ b/contact-information.html
@@ -22,12 +22,12 @@
 
   <link rel="stylesheet" href="css/reset.css"> <!-- Eric Meyer Stylesheet -->
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
-  <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
-  <link rel="stylesheet" href="css/globalTHintegration.css">
-  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages --> 
+  <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+   <link rel="stylesheet" href="css/globalTHintegration.css">
 	<!--[if lt IE 9]>
 	  <link rel="stylesheet" href="css/ie.css">
 	<![endif]-->
